# FRKB_Rapid-Audio-Organization-Tool

./: .gitignore  .npmrc  .prettierignore  AGENTS.md  DEAD_CODE_REPORT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  apply_dead_exports.sh  apply_dead_exports_renderer.sh  apply_dead_exports_shared.sh  audioRepeat.py  backlog.md  config.json  content-research.md  core.py  electron-builder.yml  electron.vite.config.mjs  electron.vite.config.ts  env.example  eslint.config.cjs  lint-staged.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyvenv.cfg  server.json  songLibrary  tmp_search.html  tmp_search2.html  tsconfig.json  updateLibrary.py  updatePath.txt  util.py  vitest.config.mts  vue.config.js
pySrc/: .gitignore  README.md  pyproject.toml
pySrc/src/: analyseSong.py  analyseSongFingerprint.py  test.py
rust_package/: .gitignore  Cargo.toml  build.rs  index.d.ts  index.d.ts.template  index.js  package.json  readme.md  rust_package.darwin-arm64.node  rust_package.win32-x64-msvc.node  rust_src.win32-x64-msvc.node
rust_package/__test__/: index.spec.mjs
rust_package/src/: analysis_utils.rs  chromaprint_native.rs  ffmpeg_decode.rs  horizontal_browse_transport.rs  horizontal_browse_transport_audio.rs  horizontal_browse_transport_auto_gain.rs  horizontal_browse_transport_auto_gain_tests.rs  horizontal_browse_transport_cue_monitor_tests.rs  horizontal_browse_transport_decode.rs  horizontal_browse_transport_decode_tests.rs  horizontal_browse_transport_dynamic_grid.rs  horizontal_browse_transport_engine_state.rs  horizontal_browse_transport_grid_sync.rs  horizontal_browse_transport_grid_sync_tests.rs  horizontal_browse_transport_loop.rs  horizontal_browse_transport_mix.rs  horizontal_browse_transport_napi.rs  horizontal_browse_transport_recording.rs  horizontal_browse_transport_runtime.rs  horizontal_browse_transport_snapshot.rs  horizontal_browse_transport_tests.rs  lib.rs  pioneer_cues.rs  (+8 more)
(+1611 files in other folders)
