[package]
edition = "2021"
name = "rust_package"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "async",
  "tokio_rt",
  "serde-json"
] }
napi-derive = "2.12.2"
serde_json = "1.0.134"
symphonia = { version = "0.5.5", features = ["aac", "adpcm", "aiff", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
ring = "0.17.7"
bytemuck = "1.14"
hex = "0.4.3"
rayon = "1.8.1"
num_cpus = "1.16.0"
futures = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[build-dependencies]
napi-build = "2.0.1"

[features]
default = []

[profile.release]
lto = true
strip = "symbols"
